Brings editable tables to the container creator inspectors.

--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -26,6 +26,9 @@
                         "path": "value"
                     }
                 ]
+            },
+            "bindings": {
+                "rows": {"<->": "@owner.values"}
             }
         },
 
