--- a/ui/sections/containers/controls/table-environment.reel/table-row-environment.reel/table-row-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-row-environment.reel/table-row-environment.html
@@ -17,6 +17,7 @@
                 "placeholder": "e.g. variable"
             },
             "bindings": {
+                "title": {"<-": "@owner.object.description"},
                 "value": {"<->": "@owner.object.variable"}
             }
         },
