--- a/ui/sections/containers/controls/table-port.reel/table-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-port.html
@@ -27,6 +27,9 @@
                         "value": "protocol"
                     }
                 ]
+            },
+            "bindings": {
+                "rows": {"<->": "@owner.values"}
             }
         },
 
