--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -38,7 +38,7 @@
                 "element": {"#": "readOnly"}
             },
             "bindings": {
-                "checked": {"<->": "!!@owner.object.read_only"}
+                "checked": {"<->": "!!@owner.object.readonly"}
             }
         }
     }
