--- a/ui/sections/containers/controls/table-volume.reel/table-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.html
@@ -27,6 +27,9 @@
                         "value": "read-only"
                     }
                 ]
+            },
+            "bindings": {
+                "rows": {"<->": "@owner.values"}
             }
         },
 
