updates field-password components

--- a/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
+++ b/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
@@ -40,15 +40,24 @@
                 "checked": {"<->": "@owner.object.v3"}
             }
         },
+        "v3_condition": {
+            "prototype": "montage/ui/condition.reel",
+            "properties": {
+                "element": {"#": "v3_condition"}
+            },
+            "bindings": {
+                "condition": {"<-": "@owner.object.v3"}
+            }
+        },
         "v3_username": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "v3_username"},
-                "label": "Username"
+                "label": "Username",
+                "placeholder": "enter username"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.v3_username"},
-                "disabled": {"<-": "!@owner.object.v3"}
+                "value": {"<->": "@owner.object.v3_username"}
             }
         },
         "v3_auth_type": {
@@ -59,8 +68,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.v3_auth_type"},
-                "options": {"<-": "@owner.v3AuthTypeOptions"},
-                "disabled": {"<-": "!@owner.object.v3"}
+                "options": {"<-": "@owner.v3AuthTypeOptions"}
             }
         },
         "v3_password": {
@@ -69,12 +77,13 @@
                 "element": {"#": "v3_password"},
                 "validationPath": "v3_password",
                 "label": "Password",
-                "label2": "Confirm Password",
-                "errorMessage": "Passwords don't match"
+                "placeholder": "enter Password",
+                "placeholder2": "confirm Password",
+                "errorMessage": "Passwords don't match",
+                "resetLabel": "Set Password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.v3_password"},
-                "disabled": {"<-": "!@owner.object.v3"}
+                "value": {"<->": "@owner.object.v3_password"}
             }
         },
         "v3_privacy_protocol": {
@@ -85,8 +94,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.v3_privacy_protocol"},
-                "options": {"<-": "@owner.v3PrivacyProtocolOptions"},
-                "disabled": {"<-": "!@owner.object.v3"}
+                "options": {"<-": "@owner.v3PrivacyProtocolOptions"}
             }
         },
         "v3_privacy_passphrase": {
@@ -95,12 +103,13 @@
                 "element": {"#": "v3_privacy_passphrase"},
                 "validationPath": "v3_privacy_passphrase",
                 "label": "Privacy Passphrase",
-                "label2": "Confirm Privacy Passphrase",
-                "errorMessage": "Passphrases don't match"
+                "placeholder": "enter passphrase",
+                "placeholder2": "confirm passphrase",
+                "errorMessage": "Passphrases don't match",
+                "resetLabel": "Set Passphrase"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.v3_privacy_passphrase"},
-                "disabled": {"<-": "!@owner.object.v3"}
+                "value": {"<->": "@owner.object.v3_privacy_passphrase"}
             }
         }
     }
@@ -111,11 +120,13 @@
         <div data-montage-id="location"></div>
         <div data-montage-id="contact"></div>
         <div data-montage-id="v3"></div>
-        <div data-montage-id="v3_username"></div>
-        <div data-montage-id="v3_password"></div>
-        <div data-montage-id="v3_auth_type"></div>
-        <div data-montage-id="v3_privacy_protocol"></div>
-        <div data-montage-id="v3_privacy_passphrase"></div>
+        <div data-montage-id="v3_condition">
+            <div data-montage-id="v3_username"></div>
+            <div data-montage-id="v3_password"></div>
+            <div data-montage-id="v3_auth_type"></div>
+            <div data-montage-id="v3_privacy_protocol"></div>
+            <div data-montage-id="v3_privacy_passphrase"></div>
+        </div>
     </div>
 </body>
 </html>
