--- a/ui/inspectors/system-section.reel/mail.reel/mail.html
+++ b/ui/inspectors/system-section.reel/mail.reel/mail.html
@@ -94,8 +94,10 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "label2": "Confirm Password",
-                "errorMessage": "Passwords don't match"
+                "placeholder": "enter password",
+                "placeholder2": "confirm password",
+                "errorMessage": "Passwords don't match",
+                "resetLabel": "Set Password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.pass"}
