--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -78,7 +78,10 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "label2": "Confirm password"
+                "placeholder": "enter password",
+                "placeholder2": "confirm password",
+                "errorMessage": "Passwords don't match",
+                "resetLabel": "Set Password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.password"}
