--- a/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
+++ b/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
@@ -86,8 +86,10 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "label2": "Confirm password",
-                "errorMessage": "Passwords don't match"
+                "placeholder": "enter password",
+                "placeholder2": "confirm password",
+                "errorMessage": "Passwords don't match",
+                "resetLabel": "Set Password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.password"}
