adds ability to inject template into modal

--- a/ui/controls/modal.reel/modal.html
+++ b/ui/controls/modal.reel/modal.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Modal">
-        <div class="Modal-container">
+        <div data-param="*" class="Modal-container">
             <div class="Modal-header">
                 <div data-montage-id="modalTitle" class="Modal-title"></div>
             </div>
