adds modal to main component

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -99,6 +99,12 @@
                 "element": {"#": "modal"}
             }
         },
+        "disconnectionModal": {
+            "prototype": "ui/disconnection-modal.reel",
+            "properties": {
+                "element": {"#": "disconnectionModal"}
+            }
+        },
         "icons": {
             "prototype": "blue-shark/ui/icons.reel",
             "properties": {
@@ -163,6 +169,7 @@
                 <div data-montage-id="drawer"></div>
         </main>
         <div data-montage-id="modal" class="Main-modal"></div>
+        <div data-montage-id="disconnectionModal"></div>
     </div>
 </body>
 </html>
