Move topologizer to new architecture

--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -54,7 +54,8 @@
             },
             "bindings": {
                 "topology": {"<-": "@owner.object.topology"},
-                "disks": {"<-": "@owner.disks"}
+                "disks": {"<-": "@owner.availableDisks"},
+                "controller": {"<-": "@owner._sectionService"}
             }
         },
 
