--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -78,17 +78,37 @@
                 "value": {"<->": "@owner.object.name"}
             }
         },
+        "ipv4_address_validator": {
+            "prototype": "core/converter/validator/ipv4-validator"
+        },
         "ipAddress": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "ipAddress"},
                 "label": "IPv4 Address",
-                "converter": {"@": "interface_alias_converter"}
+                "validator": {"@": "ipv4_address_validator"},
+                "errorMessage": "Invalid IP address"
             },
             "bindings": {
-                "value": {"<->": "@owner.object._ipAddress"},
+                "value": {"<->": "@owner.object._ipAddress.address"},
                 "disabled": {"<-": "@owner.object.dhcp.defined() && @owner.object.dhcp"},
-                "placeholderValue": {"<-": "!@owner.object.dhcp ? 'eg. 1.2.3.4/16' : ''"}
+                "placeholderValue": {"<-": "!@owner.object.dhcp ? 'eg. 1.2.3.4' : ''"}
+            }
+        },
+        "ipv4_netmask_converter": {
+            "prototype": "core/converter/ipv4-netmask-converter"
+        },
+        "ipAddressNetMask": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "ipAddressNetMask"},
+                "label": "Subnet Mask",
+                "converter": {"@": "ipv4_netmask_converter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object._ipAddress.netmask"},
+                "disabled": {"<-": "@owner.object.dhcp.defined() && @owner.object.dhcp"},
+                "placeholderValue": {"<-": "!@owner.object.dhcp ? 'eg. 255.255.255.0' : ''"}
             }
         },
         "dhcp": {
@@ -222,6 +242,7 @@
             <div data-montage-id="enabled"></div>
             <div data-montage-id="description"></div>
             <div data-montage-id="ipAddress"></div>
+            <div data-montage-id="ipAddressNetMask"></div>
             <div data-montage-id="dhcp"></div>
             <div data-montage-id="rtadv"></div>
             <div data-montage-id="mtu"></div>
