adds class for correct styling

--- a/ui/sections/containers/controls/table-settings.reel/table-row-settings.reel/table-row-settings.html
+++ b/ui/sections/containers/controls/table-settings.reel/table-row-settings.reel/table-row-settings.html
@@ -46,7 +46,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRowSettings">
+    <div data-montage-id="owner" class="TableRowSettings Table-cells">
         <div><div data-montage-id="variable"></div></div>
         <div><div data-montage-id="value"></div></div>
         <div><div data-montage-id="optional"></div></div>
