sets width and turns off multi selection on settings table

--- a/ui/sections/containers/controls/table-settings.reel/table-settings.html
+++ b/ui/sections/containers/controls/table-settings.reel/table-settings.html
@@ -17,6 +17,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Settings",
+                "isMultiSelectionEnabled": false,
                 "columns":  [
                     {
                         "value": "name"
