--- a/ui/controls/topology.reel/vdev.reel/vdev.html
+++ b/ui/controls/topology.reel/vdev.reel/vdev.html
@@ -11,7 +11,8 @@
             },
             "bindings": {
                 "classList.has('unhealthy')": {"<-": "@owner.object.status.defined() && @owner.object.status != 'ONLINE'"},
-                "vdevTypesOptions": {"<-": "@owner.vdevTypes.filter{minDisks <= @owner.children.length}.filter{maxDisks.defined() ? maxDisks >= @owner.children.length : true}"}
+                "vdevTypesOptions": {"<-": "@owner.vdevTypes.filter{minDisks <= @owner.children.length}.filter{maxDisks.defined() ? maxDisks >= @owner.children.length : true}"},
+                "selectedDisk": {"<->": "@controller.selection.0"}
             }
         },
         "typeSelect": {
@@ -28,8 +29,7 @@
         "controller": {
             "prototype": "montage/core/range-controller",
             "bindings": {
-                "content": {"<-": "@owner.children"},
-                "selection": {"<->": "@owner.selectedDisk"}
+                "content": {"<-": "@owner.children"}
             }
         },
         "disksGrid": {
