UPDATED: disable MTU when creates LAGG

--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -154,7 +154,8 @@
                 "converter": {"@": "mtuConverter"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.mtu"}
+                "value": {"<->": "@owner.object.mtu"},
+                "disabled": {"<-": "@owner.object.type == 'LAGG' + ''"}
             }
         },
         "interfaceTypeSubstitution": {
