--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -155,7 +155,7 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.object.mtu"},
-                "disabled": {"<-": "@owner.object.type == 'LAGG' + ''"}
+                "disabled": {"<-": "@owner.object.type == 'LAGG'"}
             }
         },
         "interfaceTypeSubstitution": {
