Add storage overview

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -34,7 +34,7 @@
                 "converter": {"@": "bytesConverter"}
             },
             "bindings": {
-                "value": {"<-": "@owner.object.properties.size.parsed"}
+                "value": {"<-": "@owner.object._properties.size.parsed"}
             }
         },
         "validationController": {
