updates password fields on various inpsectors

--- a/ui/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
+++ b/ui/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
@@ -36,7 +36,8 @@
             "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "domainAccountPassword"},
-                "label": "Domain Account Password"
+                "label": "Domain Account Password",
+                "placeholder": "enter password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.parameters.password"}
