--- a/ui/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
+++ b/ui/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
@@ -47,7 +47,8 @@
             "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "bindPassword"},
-                "label": "Bind password"
+                "label": "Bind password",
+                "placeholder": "enter password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.parameters.password"}
