--- a/ui/inspectors/directory-services.reel/winbind-service.reel/winbind-service.html
+++ b/ui/inspectors/directory-services.reel/winbind-service.reel/winbind-service.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             }
         },
-        
+
         "domainName": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -37,7 +37,8 @@
             "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "domainAccountPassword"},
-                "label": "Domain Account Password"
+                "label": "Domain Account Password",
+                "placeholder": "enter password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.parameters.password"}
