--- a/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
+++ b/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
@@ -77,7 +77,7 @@
                 "element": {"#": "v3_password"},
                 "validationPath": "v3_password",
                 "label": "Password",
-                "placeholder": "enter Password",
+                "placeholder1": "enter Password",
                 "placeholder2": "confirm Password",
                 "errorMessage": "Passwords don't match",
                 "resetLabel": "Set Password"
@@ -103,7 +103,7 @@
                 "element": {"#": "v3_privacy_passphrase"},
                 "validationPath": "v3_privacy_passphrase",
                 "label": "Privacy Passphrase",
-                "placeholder": "enter passphrase",
+                "placeholder1": "enter passphrase",
                 "placeholder2": "confirm passphrase",
                 "errorMessage": "Passphrases don't match",
                 "resetLabel": "Set Passphrase"
