--- a/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
+++ b/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
@@ -86,7 +86,7 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "placeholder": "enter password",
+                "placeholder1": "enter password",
                 "placeholder2": "confirm password",
                 "errorMessage": "Passwords don't match",
                 "resetLabel": "Set Password"
