--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -116,7 +116,7 @@
                 "element": {"#": "password"},
                 "validationPath": "password",
                 "label": "Password",
-                "placeholder": "enter password",
+                "placeholder1": "enter password",
                 "placeholder2": "confirm password",
                 "errorMessage": "Passwords don't match"
             },
