--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -74,14 +74,11 @@
             }
         },
         "password": {
-            "prototype": "blue-shark/ui/field-password.reel",
+            "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "placeholder": "enter password",
-                "placeholder2": "confirm password",
-                "errorMessage": "Passwords don't match",
-                "resetLabel": "Set Password"
+                "placeholder": "enter password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.password"}
