--- a/ui/inspectors/system-section.reel/mail.reel/mail.html
+++ b/ui/inspectors/system-section.reel/mail.reel/mail.html
@@ -90,14 +90,11 @@
             }
         },
         "password": {
-            "prototype": "blue-shark/ui/field-password.reel",
+            "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "placeholder": "enter password",
-                "placeholder2": "confirm password",
-                "errorMessage": "Passwords don't match",
-                "resetLabel": "Set Password"
+                "placeholder": "enter password"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.pass"}
